--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <div class = "container">
         <h1>ETCH-A-SKETCH</h1>
-
+        <p>grid density</p>
+        <input type="range" value="24" min="1" max="100" onchange="populate_the_grid(this.nextElementSibling.value)" oninput="this.nextElementSibling.value = this.value">
+        <output>24</output>
         <div class ="parent">
             
         </div>
